--- a/chart-sketches/00-compare-two/index.html
+++ b/chart-sketches/00-compare-two/index.html
@@ -32,7 +32,12 @@
 
 		<div id='scatter'></div>
 	</section>
-	
+
+	<section>
+		<p> something something arrival
+
+		<div id='arrival'></div>
+	</section>
 </div>
 
 
