--- a/chart-sketches/04-grid-sort/index.html
+++ b/chart-sketches/04-grid-sort/index.html
@@ -10,26 +10,12 @@
 
 <div id='main'>
 
-    <p>From the Universal Sentence Encoder paper 
-    <img src='heatmap.png' width='500'>
-
 	<section>
-    <p>Difference between each value in the encodings of the two sentences</p>
+    <p>Sorting the vector elements by their across the sentences</p>
     <div id='grid'></div>
 
-    <p>L1 distance between sentences</p>
-    <div id='grid-l1'></div>
-
-    <p>L2 distance between sentences</p>
-    <div id='grid-l2'></div>
-
-    <p>cosine similarity</p>
-    <div id='grid-cos'></div>
-
-    <p>angular distance (what the paper uses)</p>
+    <p>angular distance</p>
     <div id='grid-angular'></div>
-
-    <p>hmm, not as good as the paper!
 
 
 	</section>
