watched is closest to it self

--- a/chart-sketches/03-grid-diff/index.html
+++ b/chart-sketches/03-grid-diff/index.html
@@ -12,6 +12,7 @@
 
     <p>From the Universal Sentence Encoder paper 
     <img src='heatmap.png' width='500'>
+    <img src='heatmap-lite.png' width='500'>
 
 	<section>
     <p>Difference between each value in the encodings of the two sentences</p>
@@ -42,6 +43,8 @@
 <script src="https://unpkg.com/@tensorflow/tfjs-converter/dist/tf-converter.js"></script>
 
 <script src="/dist/src.f10117fe.js"></script>
+
+<script src="../06-diff-addition/meanDiff.js"></script>
 
 
 <script src='../00-compare-two/d3_.js'></script>
