--- a/chart-sketches/04-grid-sort/index.html
+++ b/chart-sketches/04-grid-sort/index.html
@@ -27,7 +27,7 @@
 <script src="https://unpkg.com/@tensorflow/tfjs-core/dist/tf-core.js"></script>
 <script src="https://unpkg.com/@tensorflow/tfjs-converter/dist/tf-converter.js"></script>
 
-<script src="/dist/src.f10117fe.js"></script>
+<script src="../src.f10117fe.js"></script>
 
 
 <script src='../00-compare-two/d3_.js'></script>
