--- a/chart-sketches/00-compare-two/index.html
+++ b/chart-sketches/00-compare-two/index.html
@@ -45,7 +45,7 @@
 <script src="https://unpkg.com/@tensorflow/tfjs-core/dist/tf-core.js"></script>
 <script src="https://unpkg.com/@tensorflow/tfjs-converter/dist/tf-converter.js"></script>
 
-<script src="/dist/src.f10117fe.js"></script>
+<script src="../src.f10117fe.js"></script>
 
 
 <script src='d3_.js'></script>
