--- a/chart-sketches/03-grid-diff/index.html
+++ b/chart-sketches/03-grid-diff/index.html
@@ -42,7 +42,7 @@
 <script src="https://unpkg.com/@tensorflow/tfjs-core/dist/tf-core.js"></script>
 <script src="https://unpkg.com/@tensorflow/tfjs-converter/dist/tf-converter.js"></script>
 
-<script src="/dist/src.f10117fe.js"></script>
+<script src="../src.f10117fe.js"></script>
 
 <script src="../06-diff-addition/meanDiff.js"></script>
 
