--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <style></style>
 </head>
 <body>
-  <script src="https://unpkg.com/@tensorflow/tfjs-core/dist/tf-core.js"></script>
+  <script src="https://unpkg.com/@tensorflow/tfjs-core@0.15.4/dist/tf-core.js"></script>
   <!-- <script src="./tf-core.js"></script> -->
-  <script src="https://unpkg.com/@tensorflow/tfjs-converter/dist/tf-converter.js"></script>
+  <script src="https://unpkg.com/@tensorflow/tfjs-converter@0.8.3/dist/tf-converter.js"></script>
   <!-- <script src="./tf-converter.js"></script> -->
   <script src="./src/index.ts"></script>
 </body>
