--- a/chart-sketches/02-typing-log-dif/index.html
+++ b/chart-sketches/02-typing-log-dif/index.html
@@ -18,13 +18,10 @@
 
 
 
-<script src="https://unpkg.com/@tensorflow/tfjs-core/dist/tf-core.js"></script>
-<script src="https://unpkg.com/@tensorflow/tfjs-converter/dist/tf-converter.js"></script>
-
+<script src="../lib/tf-core.js"></script>
+<script src="../lib/tf-convert.js"></script>
 <script src="../src.f10117fe.js"></script>
-
-
 <script src='../00-compare-two/d3_.js'></script>
-<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="../lib/d3-chromatic.js"></script>
 
 <script src='_script.js'></script>
